# mechanizm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
midi/: kick.mid  kick_test.mid  snare_test.mid  test.mid
projects/: project.json
projects/new/: project.json
projects/pro1/: project.json
projects/pro1/clips/0/: clip.json
projects/pro1/clips/1/: clip.json
projects/pro1/clips/2/: clip.json
projects/pro1/clips/3/: clip.json
projects/pro1/clips/4/: clip.json
projects/pro1/clips/5/: clip.json
projects/pro1/sources/b0786c4ef92b5813e79ab6509a1e3430/: source.json
projects/pro2/: project.json
projects/pro2/clips/0/: clip.json
projects/pro2/clips/1/: clip.json
projects/pro2/clips/2/: clip.json
projects/pro2/clips/3/: clip.json
projects/pro2/clips/4/: clip.json
projects/pro2/clips/5/: clip.json
projects/pro2/clips/6/: clip.json
projects/pro2/mappings/2/: mapping.json
projects/pro2/mappings/3/: mapping.json
projects/pro2/mappings/4/: mapping.json
projects/pro2/mappings/5/: mapping.json
projects/pro2/mappings/6/: mapping.json
projects/pro2/sequences/80a5c5a3b1b872c145b0a4a31e943259/: sequence.json
projects/pro2/sources/5c054b3be792d2a69128d54b0e8637b8/: source.json
projects/pro2/sources/9a634f604899df9520c008bf51d866a4/: source.json
projects/pro2/sources/b0786c4ef92b5813e79ab6509a1e3430/: source.json
src/: CMakeLists.txt  application.cpp  application.h  browser.cpp  browser.h  clip.cpp  clip.h  clips_widget.cpp  clips_widget.h  compositor.cpp  compositor.h  editor.cpp  editor.h  editor_widget.cpp  editor_widget.h  json.cpp  json.h  launcher_widget.cpp  launcher_widget.h  main.cpp  mapping.cpp  mapping.h  player.cpp  player.h  player_widget.cpp  player_widget.h  project.cpp  project.h  reader.h  sequence.cpp  sequence.h  source.cpp  source.h  sources_widget.cpp  sources_widget.h  ui.cpp  ui.h  window.cpp  window.h
src/gui/: application.cpp  application.h  clip_editor_widget.cpp  clip_editor_widget.h  clip_editor_window.cpp  clip_editor_window.h  clip_info.cpp  clip_info.h  clip_table.cpp  clip_table.h  clips_widget.cpp  clips_widget.h  clips_window.cpp  clips_window.h  editor_widget.cpp  editor_widget.h  launcher_widget.cpp  main_window.cpp  main_window.h  mapping_editor_widget.cpp  mapping_editor_widget.h  mapping_info.cpp  mapping_table.cpp  mappings_widget.cpp  mappings_widget.h  mappings_window.cpp  mappings_window.h  player_widget.cpp  player_widget.h  project_widget.cpp  project_widget.h  rythmic_point_table.cpp  rythmic_point_table.h  sequence_info.cpp  sequence_info.h  sequence_table.cpp  sequence_table.h  sequences_widget.cpp  sequences_widget.h  sequences_window.cpp  (+8 more)
src/gui/clip/: clip_editor_window.cpp  clip_editor_window.h  clip_info.cpp  clip_info.h  clip_table.cpp  clips_window.cpp  clips_window.h  rythmic_point_table.cpp
src/gui/mapping/: abstract_timeline_widget.cpp  abstract_timeline_widget.h  channel_table.cpp  channel_table.h  clip_timeline.cpp  clip_timeline.h  mapping_editor_window.cpp  mapping_editor_window.h  mapping_info.cpp  mapping_info.h  mapping_table.cpp  mapping_table.h  mapping_timeline.cpp  mapping_timeline.h  mappings_window.cpp  mappings_window.h
src/gui/sequence/: sequence_info.cpp  sequence_info.h  sequence_table.cpp  sequence_table.h  sequence_timeline_widget.cpp  sequence_timeline_widget.h  sequence_waveform_widget.cpp  sequence_waveform_widget.h  sequences_window.cpp  sequences_window.h
src/gui/source/: source_info.cpp  source_info.h  source_table.cpp  sources_window.cpp  sources_window.h
